Fix #77 [Usability Issues in Console v5] Vertical scroll overlap when you have many tabs

--- a/Website/Composite/styles/default/explorer.less
+++ b/Website/Composite/styles/default/explorer.less
@@ -16,15 +16,44 @@ ui|explorer {
 	float: left;
 	margin-top: -30px;
 	padding-top: 30px;
+	width: @explorer-width;
+
+	&.scrollup {
+		&:before {
+			content: "";
+			position: absolute;
+			top: 27px;
+			left: 5px;
+			width: 0;
+			height: 0;
+			border-style: solid;
+			border-width: 0px 20px 6px 20px;
+			border-color: transparent transparent @primary-color transparent;
+		}
+
+		&:after {
+			content: "";
+			position: absolute;
+			top: 29px;
+			left: 6px;
+			width: 0;
+			height: 0;
+			border-style: solid;
+			border-width: 0px 19px 4px 19px;
+			border-color: transparent transparent @menubar-bg-color transparent;
+		}
+	}
 }
 
 ui|explorermenu {
 	background: @explorer-bg-color;
 	float: left;
-	width: @explorer-width;
+	width: 100%;
 	height: 100%;
 	overflow: hidden;
 	overflow-y: auto;
+	box-sizing: content-box;
+	padding-right: 16px;
 
 	ui|toolbarbutton {
 		background: none !important;
@@ -47,6 +76,34 @@ ui|explorermenu {
 
 	ui|labeltext {
 		display: none;
+	}
+
+	&.scrolldown {
+		&:before {
+			z-index: 6;
+			content: "";
+			position: absolute;
+			bottom: 4px;
+			left: 5px;
+			width: 0;
+			height: 0;
+			border-style: solid;
+			border-width: 6px 20px 0 20px;
+			border-color: @primary-color transparent transparent transparent;
+		}
+
+		&:after {
+			z-index: 6;
+			content: "";
+			position: absolute;
+			bottom: 6px;
+			left: 6px;
+			width: 0;
+			height: 0;
+			border-style: solid;
+			border-width: 4px 19px 0 19px;
+			border-color: @menubar-bg-color transparent transparent transparent;
+		}
 	}
 }
 
@@ -142,7 +199,7 @@ ui|explorerdecks {
 	}
 
 
-	ui|explorermenu {
+	ui|explorer {
 		width: @explorer-expanded-width;
 
 		ui|labeltext {
